--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,7 +1,12 @@
----
-# Ref: https://help.github.com/en/github/building-a-strong-community/configuring-issue-templates-for-your-repository#configuring-the-template-chooser
-blank_issues_enabled: false # default is true
+# yaml-language-server: $schema=https://json.schemastore.org/github-issue-config.json
+blank_issues_enabled: false
 contact_links:
+  - name: "Error: Sign in to confirm you’re not a bot"
+    url: "https://github.com/distubejs/ytdl-core/issues/21"
+    about: "Don't create a new issue. Please check how to use cookie with the issue link here and comment if you have any questions."
+  - name: "WARNING: Could not parse *** function"
+    url: "https://github.com/distubejs/ytdl-core/issues/144"
+    about: "Don't create a new issue. Please upload your file to the #144 issue and comment if you have any questions."
   - name: Discord Support Server
     url: https://discord.gg/feaDd9h
     about: >
